--- a/WTD/index.html
+++ b/WTD/index.html
@@ -11,29 +11,28 @@
         <div class="navbar">
             <h1 id="real-madrid-button">REAL MADRID</h1>
             <ul>
-                <li><a href="vysledky.html">Výsledky</a></li>
-                <li><a href="program.html">Program</a></li>
-                <li><a href="tabulky.html">Tabuľky</a></li>
+                <li><a href="história.html">História</a></li>
+                <li><a href="tabulky.html">Tabuľka</a></li>
                 <li><a href="supiska.html">Súpiska</a></li>
+                <li><a href="spekulacie.html">Prestupy</a></li>
                 <li><a href="galeria.html">Galéria</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="quiz.html">Dotazník</a></li>
             </ul>
         </div>
     </nav>
 
     <div class="container">
-        <h2>Vitajte na oficiálnej stránke Real Madrid</h2>
+        <h2>Vitajte na neoficiálnej stránke Real Madrid</h2>
         <p>Tu môžete nájsť aktuálne výsledky, program, tabuľky, informácie o hráčoch a viac.</p>
     </div>
     <div class="container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec iaculis tellus. Etiam nec libero vel odio efficitur ultrices. Etiam ullamcorper ullamcorper felis, quis interdum ipsum viverra nec. Sed volutpat justo nisi, quis maximus velit pulvinar quis. In vitae ipsum iaculis, suscipit diam non, lacinia enim. Vivamus mattis, ante quis porta varius, eros nisl iaculis mi, eu vestibulum odio elit non magna. Vestibulum congue dui a porttitor ullamcorper. Etiam vel leo vitae nisi venenatis posuere. Etiam erat libero, bibendum id justo pulvinar, convallis pharetra ex.</p>
+        <p>Klub bol založený 6. marca 1902 ako Madrid Football Club, a už od začiatku nosil na domáce zápasy biele dresy. Slovo Real je po slovensky Kráľovský, toto udelenie dostal klub od kráľa Alfonza XIII v roku 1920 spolu s kráľovskou korunou na znaku. Klub hrá domáce zápasy na štadióne Santiago Bernabéu s kapacitou 81 044 od roku 1947. Na rozdiel od väčšiny Európskych športových inštitúcii vlastnia a prevádzkujú klub členovia Realu Madrid (socios) počas celej histórie.</p>
     </div>
     <div class="container">
-        <p>Phasellus vel dolor non libero vehicula semper ac sed quam. Aenean posuere tincidunt elit, vitae dapibus eros. Pellentesque sit amet est a ligula pretium ultrices. Suspendisse laoreet lorem libero, eget vehicula risus accumsan vitae. Nullam auctor sit amet orci feugiat gravida. Nullam suscipit, neque sit amet rutrum feugiat, lorem erat mattis diam, a vestibulum diam ipsum id leo. Aliquam et augue rutrum, pharetra neque vel, ullamcorper ante. Etiam placerat, eros sit amet mollis commodo, turpis lacus suscipit ante, ut hendrerit nisi arcu ut augue. Aenean et dictum lacus. Donec convallis lorem nec purus sagittis, in porttitor tellus gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse imperdiet nibh ac tincidunt egestas</p>
+        <p>Klub je jeden z najpodporovanejších tímov na svete. Real Madrid je jedným z troch tímov, ktoré nikdy nezostúpili z La Ligy do nižšej súťaže, spoločne s Athleticom Bilbaom a FC Barcelonou. Real Madrid má veľa dlhodobých rivalov, medzi ktorými sú najznámejší FC Barcelona, známe ako "El Clásico", spoločne s Atléticom Madrid v takzvanom "El Derbi".</p>
     </div>
     <div class="container">
-    <p>Cras eget ullamcorper nisl. Sed id sem nisi. Proin et ullamcorper elit, eu cursus diam. Aenean felis augue, auctor vitae placerat id, pharetra vitae nunc. Cras id nulla eget neque blandit sollicitudin. Vestibulum quis bibendum est. Cras in aliquam libero, at interdum orci. Nulla facilisis neque id ligula ultricies blandit in at risus.</p>
+    <p>V domácich súťažiach získal klub 67 titulov: rekordných 35 v La Lige, 20 v Copa Del Rey a 12 v Supercopa de España. V Európskych a medzinárodných súťažiach vyhral klub rekordných 29 trofejí; rekordných 14 v Lige Majstrov UEFA, 2 v Pohári UEFA, rekordných 5 v Superpohári UEFA, a rekordných 8 v Majstrovstvách sveta klubov FIFA.</p>
     </div>
 
     <script>
