--- a/WTD/supiska.html
+++ b/WTD/supiska.html
@@ -11,12 +11,12 @@
         <div class="navbar">
             <h1 id="real-madrid-button">REAL MADRID</h1>
             <ul>
-                <li><a href="vysledky.html">Výsledky</a></li>
-                <li><a href="program.html">Program</a></li>
-                <li><a href="tabulky.html">Tabuľky</a></li>
+                <li><a href="história.html">História</a></li>
+                <li><a href="tabulky.html">Tabuľka</a></li>
                 <li><a href="supiska.html">Súpiska</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="spekulacie.html">Prestupy</a></li>
+                <li><a href="galeria.html">Galéria</a></li>
+                <li><a href="quiz.html">Dotazník</a></li>
             </ul>
         </div>
     </nav>
